# ecsaber

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
oops-patch/: CMakeLists.txt
oops-patch/src/: CMakeLists.txt
oops-patch/src/oops/: CMakeLists.txt
oops-patch/src/oops/base/: DataSetBase.h  FieldSet3D.cc  FieldSet3D.cc.patch  FieldSet3D.h  FieldSet4D.cc  FieldSet4D.cc.patch  FieldSet4D.h  FieldSet4D.h.patch  FieldSets.cc  FieldSets.h  FieldSets.h.patch  GeometryData.cc  GeometryData.cc.patch  GeometryData.h.patch  ModelSpaceCovarianceParametersBase.h.patch  ParameterTraitsVariables.cc  ParameterTraitsVariables.h  Variables.cc  Variables.cc.patch  Variables.h  Variables.h.patch
oops-patch/src/oops/generic/: AtlasInterpolator.cc  AtlasInterpolator.h  GlobalInterpolator.cc  GlobalTemplatedInterpolator.h  LocalInterpolatorBase.cc  LocalInterpolatorBase.h  UnstructuredInterpolator.cc  UnstructuredInterpolator.cc.patch  UnstructuredInterpolator.h  UnstructuredInterpolator.h.patch
oops-patch/src/oops/interface/: ModelData.h  ModelData.h.patch
oops-patch/src/oops/mpi/: mpi.cc.patch
oops-patch/src/oops/runs/: ConvertState.h  ConvertState.h.patch
oops-patch/src/oops/util/: ConfigFunctions.cc.patch  FieldSetHelpers.cc  FieldSetHelpers.cc.patch  FieldSetHelpers.h  FieldSetHelpers.h.patch  FunctionSpaceHelpers.cc  FunctionSpaceHelpers.cc.patch  FunctionSpaceHelpers.h  FunctionSpaceHelpers.h.patch
oops_patch/: CMakeLists.txt  oops_patch-config.cmake.in  oops_patch-import.cmake.in
oops_patch/src/: CMakeLists.txt
quenchxx_test/: CMakeLists.txt  README.md
quenchxx_test/test/: CMakeLists.txt
quenchxx_test/test/interface/: TestErrorCovariance.cc  TestGeometry.cc  TestIncrement.cc  TestLinearModel.cc  TestLocalization.cc  TestLocations.cc  TestModel.cc  TestModelAuxControl.cc  TestModelAuxCovariance.cc  TestModelAuxIncrement.cc  TestObsAuxControl.cc  TestObsAuxCovariance.cc  TestObsAuxIncrement.cc  TestObsErrorCovariance.cc  TestObsVector.cc  TestObservationSpace.cc  TestState.cc  TestVariables.cc
quenchxx_test/test/internal/: GeoVaLs.cc  Geometry.cc  Increment.cc  LocalizationMatrix.cc  Locations.cc  Model.cc  ModelAux.cc  ModelAuxCovariance.cc  ModelAuxIncrement.cc  ObsAuxControl.cc  ObsAuxCovariance.cc  ObsAuxIncrement.cc  ObsOperator.cc  ObsSpace.cc  ObsVec.cc  State.cc  TestConfig.h  Tlm.cc
quenchxx_test/test/testinput/: assim_ensemble.json  bgos_linear_ensemble.json  bgos_linear_randomized.json  bgos_nonlinear_ensemble.json  bgos_nonlinear_randomized.json  ensemble_variance.json  evil_assim_ensemble.json  evil_control_3dvar.json  evil_control_update_R.json  evil_control_update_S.json  evil_dual_3dvar.json  evil_dual_update_D.json  evil_dual_update_R.json  evil_dual_update_S.json  evil_ensemble_variance.json  evil_primal_3dvar.json  evil_primal_update_D.json  evil_primal_update_R.json  evil_primal_update_S.json  glb_3densvar.json  glb_3dvar.json  glb_4densvar.json  glb_background_06.json  glb_ensemble_06.json  glb_evil_control_3dvar.json  glb_evil_control_update_R.json  glb_evil_control_update_S.json  glb_evil_dual_3dvar.json  glb_evil_dual_update_D.json  glb_evil_dual_update_R.json  glb_evil_dual_update_S.json  glb_evil_primal_3dvar.json  glb_evil_primal_update_D.json  glb_evil_primal_update_R.json  glb_evil_primal_update_S.json  glb_hofx.json  glb_interfaces.json  glb_makeobs_06.json  glb_makeobs_12.json  glb_makeobs_18.json  (+11 more)
quenchxx_test/test/testref/: evil_background.ref  evil_control_3dvar.ref  evil_dual_3dvar.ref  evil_ensemble.ref  evil_makeobs.ref  evil_primal_3dvar.ref  evil_truth.ref  glb_3densvar.ref  glb_3dvar.ref  glb_4densvar.ref  glb_hofx.ref  glb_makeobs_06.ref  glb_makeobs_12.ref  glb_makeobs_18.ref  reg_3densvar.ref  reg_4densvar.ref  reg_background_06.ref  reg_background_12.ref  reg_background_18.ref  reg_ensemble_06.ref  reg_ensemble_12.ref  reg_ensemble_18.ref  reg_hofx.ref  reg_makeobs_06.ref  reg_makeobs_12.ref  reg_makeobs_18.ref  synthetic_data_generate.ref  synthetic_data_makeobs.ref
saber/: CMakeLists.txt  saber-config.cmake.in  saber-import.cmake.in  saber-import.cmake.in.patch  update_summary.txt
saber/quench/: CMakeLists.txt
saber/quench/src/: CMakeLists.txt  CMakeLists.txt.patch  Covariance.h  Covariance.h.patch  CovarianceECDef.h  CovarianceECInc.h  CovarianceParameters.h  CovarianceParameters.h.patch  Fields.cc  Fields.cc.patch  Fields.cc.tmp.rej  Fields.h  Fields.h.patch  FieldsECDef.h  FieldsECImp.cc  FieldsECImp.h  FieldsECInc.h  FieldsIOBase.cc  FieldsIOBase.h  FieldsIOBase.h.patch  GeoVaLs.cc  GeoVaLs.h  GeoVals.h  Geometry.cc  Geometry.cc.patch  Geometry.h  Geometry.h.patch  GeometryECDef.h  HorizScaleDecomposition.h  HybridWeight.cc  HybridWeight.h  IncrEnsCtlVec.h  IncrModCtlVec.h  Increment.cc  Increment.cc.patch  Increment.h  Increment.h.patch  IncrementECDef.h  IncrementECImp.cc  IncrementECImp.h  (+69 more)
saber/quench/src/default/: FieldsIODefault.cc  FieldsIODefault.h  FieldsIODefault.h.patch
saber/quench/src/grib/: FieldsIOGrib.cc  FieldsIOGrib.h  FieldsIOGrib.h.patch
saber/quench/src/mains/: CMakeLists.txt  quenchConvertState.cc  quenchErrorCovarianceToolbox.cc  quenchHofX.cc  quenchMakeObs.cc  quenchProcessPerts.cc  quenchVariational.cc
saber/quench/src/quench/: CMakeLists.txt  Covariance.h  Fields.cc  Fields.h  FieldsIOBase.cc  FieldsIOBase.h  GeoVaLs.cc  GeoVaLs.h  Geometry.cc  Geometry.h  HybridWeight.cc  HybridWeight.h  Increment.cc  Increment.h  Interpolation.cc  Interpolator.h  LinearModel.cc  LinearModel.h  LinearObsOperator.cc  LinearObsOperator.h  Locations.cc  Locations.h  Logbook.cc  Model.cc  ModelAuxControl.h  ModelAuxControlEstimator.h  ModelAuxCovariance.h  ObsAuxControl.cc  ObsAuxControl.h  ObsAuxCovariance.cc  ObsAuxCovariance.h  ObsAuxCtlVec.cc  ObsAuxCtlVec.h  ObsAuxIncrement.cc  ObsAuxIncrement.h  ObsError.cc  ObsError.h  ObsOperator.cc  ObsOperator.h  ObsSpace.cc  (+9 more)
saber/quench/src/quench/default/: FieldsIODefault.cc  FieldsIODefault.h
saber/test/: CMakeLists.txt  CMakeLists.txt.patch  (+1 more)
script/: check_diff.sh  check_diff_recursively.sh
vader/: CMakeLists.txt  vader-import.cmake.in.patch
(+825 files in other folders)
